			SWI-Prolog ChangeLog
			====================

  * FIXED: writef('\\X'), where is is not a digit raised exception.  Now
    writes \X.  Patch by Lyosha Ilyukhin.

  * FIXED: report "x, ), y" as syntax error rather then , ')', y.  Reported
    by Tolga Konik.

  * ADDED: installation of dotfiles (Unix Makefile)

  * ADDED: edit/1 to include definition for uedit32 (Tolga Konik)

  * IMPROVED: edit/1 feedback when calling user editor through shell/2.

  * FIXED: Cleanup after exceptions inside the generator of
    bagof/setof/findall.  Left inconsistent linked-list with possibility
    for random crashes on further use of these predicates.  Spotted by
    Laurens van der Meij.

  * ADDED: option lock to open/4, providing simple fcntl() based advisory
    locks on files.  POSIX only (Windows says it is, but appearently this
    isn't true as they don't have fcntl()).

  * MAINTAIN: Some improvements to manual generation (Serg Korolyov).

  * FIXED: expected type in sub_string/5 (Pierre.Nugues)


VERSION 4.0.10
==============

  * FIXED/ENHANCED: Win32: Various issues around installation.

  * FIXED: Prefer %HOMEDRIVE%\%HOMEPATH% over %USERPROFILE% for expanding
    ~ on Windows.

  * FIXED: MT version: cleanup mutex after closing a stream.  Memory leak
    detected by Andrew V. Diatchkov.

  * PORT: On machines using FPE rather then IEEE754 math error reporting
    supporting the fpsetmask() interface, use this interface to make math
    errors IEEE754 compliant.  This applies to FreeBSD upto 3.x.  Thanks
    to NIDE Naoyuki for a clear explanation and fix.

  * MODIFIED: Windows.  If Prolog was started as <exe> <file.pl> and file.pl
    is a script file, change directory to the directory holding the <file.pl>.
    This makes starting a script by opening it from the explorer and dragging
    a script on plwin.exe behave the same.

  * FIXED: Mistake handling script arguments (#!): forgotten string
    termination.
